# Thermophysical-Property-Melting-Point

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: eda.ipynb  xgboost.ipynb
