[project]
name = "thermophysical-property-melting-point"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "s3fs>=2025.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
]
